<style scoped>: Improve shortcut code for cases where <style scoped> isn't used https://bugs.webkit.org/show_bug.cgi?id=77410

Move shortcut from setupScopingElementStack(), do it at the calling sites instead
(where a larger chunk of work can be skipped).

Reviewed by Antti Koivisto.

No new tests. (refactoring)

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::setupScopingElementStack): remove shortcut code
(WebCore::CSSStyleSelector::pushParent): add shortcut code
(WebCore::CSSStyleSelector::matchScopedAuthorRules): factor matching scoped rules out from matchAuthorRules
(WebCore::CSSStyleSelector::matchAuthorRules): add shortcut code
* css/CSSStyleSelector.h:
(CSSStyleSelector): add matchScopedAuthorRules

Canonical link: https://commits.webkit.org/94308@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106351 268f45cc-cd09-0410-ab3c-d52691b4dbfc